# humm-earth-core-happ

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/humm_earth_core/zomes/coordinator/content/: Cargo.toml
dnas/humm_earth_core/zomes/coordinator/content/src/: all_encrypted_content.rs  all_encrypted_content_by_author.rs  encrypted_content.rs  indexing.rs  lib.rs
dnas/humm_earth_core/zomes/coordinator/content/src/linking/: acl_links.rs  dynamic_links.rs  hive_link.rs  humm_content_id_link.rs  mod.rs  time_indexed_links.rs
dnas/humm_earth_core/zomes/integrity/content/: Cargo.toml
dnas/humm_earth_core/zomes/integrity/content/src/: encrypted_content.rs  lib.rs
tests/: package.json
tests/src/humm_earth_core/content/: all-encrypted-content-by-author.test.ts  common.ts  encrypted-content.test.ts
tests/src/humm_earth_core/content/linking/: acl_links.test.ts  content_id_link.test.ts  dynamic_links.test.ts  hive_link.test.ts
ui/: package.json
ui/src/: App.vue
ui/src/humm_earth_core/content/: AllEncryptedContentByAuthor.vue  CreateEncryptedContent.vue  EditEncryptedContent.vue  EncryptedContentDetail.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
