[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.1"
hdk = "=0.2.1"
holochain_integrity_types = "=0.1.2"
serde = "=1.0.145"
time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-2.1" }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-2.1" }

[workspace.dependencies.content]
path = "dnas/humm_earth_core/zomes/coordinator/content"

[workspace.dependencies.content_integrity]
path = "dnas/humm_earth_core/zomes/integrity/content"
