[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.35"
hdk = "=0.3.0-beta-dev.39"
holochain_integrity_types = "=0.3.0-beta-dev.32"
serde = "=1.0.197"
# time_indexing = { git = "https://github.com/ddd-mtl/time-indexing", branch = "hdk-3.0" }
# zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }

[workspace.dependencies.content]
path = "dnas/humm_earth_core/zomes/coordinator/content"

[workspace.dependencies.content_integrity]
path = "dnas/humm_earth_core/zomes/integrity/content"
